# mx-stablecoin-sc

./: Cargo.toml  README.md
liquidity_pool/: Cargo.toml
liquidity_pool/mandos/: borrow-ok.scen.json  init.scen.json  liquidate-ok.scen.json  lock-debt-tokens-ok.scen.json  repay-ok.scen.json
liquidity_pool/output/: liquidity-pool.wasm
liquidity_pool/src/: debt_token.rs  lib.rs  library.rs  models.rs  stablecoin_token.rs
liquidity_pool/wasm/: Cargo.toml
lock-rewards/: Cargo.toml
lock-rewards/src/: lib.rs  user_deposit.rs
lock-rewards/wasm/: Cargo.toml
lock-rewards/wasm/src/: lib.rs
price-aggregator/mandos/: get_latest_price_feed.scen.json  oracle_price_decrease.json  oracle_price_increase.json  oracle_submit.scen.json
stablecoin-v2/: Cargo.toml
stablecoin-v2/abi/: Cargo.toml
stablecoin-v2/abi/src/: main.rs
stablecoin-v2/mandos/: buy_collateral_first.scen.json  close_hedging_position_price_decrease.scen.json  close_hedging_position_price_increase.scen.json  init.scen.json  open_hedging_position.scen.json  sell_collateral_first.scen.json
stablecoin-v2/src/: fees.rs  hedging_agents.rs  hedging_token.rs  keepers.rs  lib.rs  liquidity_providers.rs  liquidity_token.rs  math.rs  pools.rs  stablecoin_token.rs  token_common.rs
stablecoin-v2/src/actors/: hedging_agents.rs  keepers.rs  liquidity_providers.rs  mod.rs  stable_seekers.rs
stablecoin-v2/src/economics/: fees.rs  lending.rs  math.rs  mod.rs  pools.rs
stablecoin-v2/src/events/: hedging_agents_events.rs  lending_events.rs  mod.rs  (+2 more)
stablecoin-v2/tests/: mandos_go_test.rs
stablecoin-v2/wasm/: Cargo.toml
stablecoin-v3/: Cargo.toml
stablecoin-v3/meta/: Cargo.toml
stablecoin-v3/meta/src/: main.rs
stablecoin-v3/src/: aggregator_proxy.rs  collateral_provision.rs  config.rs  errors.rs  events.rs  lib.rs  virtual_liquidity_pools.rs
stablecoin-v3/tests/: test.rs
stablecoin-v3/tests/contract_interactions/: mod.rs
stablecoin-v3/tests/contract_setup/: mod.rs
stablecoin-v3/tests/stablecoin_contract_setup/: mod.rs
stablecoin-v3/wasm/: Cargo.toml
stablecoin-v3/wasm/src/: lib.rs
(+3 files in other folders)
