[package]
name = "lock-rewards-wasm"
version = "0.0.1"
authors = ["Dorin Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.lock-rewards]
features = [ "wasm-output-mode",]
default-features = false
path = ".."

[dependencies.elrond-wasm-output]
version = "0.17.2"
features = ["wasm-output-mode", "panic-message"]
