[package]
name = "stablecoin-v3-meta"
version = "0.0.0"
authors = [ "Sorin Petreasca <sorin.petreasca@elrond.com>",]
edition = "2018"
publish = false

[dev-dependencies]

[dependencies.stablecoin-v3]
path = ".."

[dependencies.elrond-wasm]
version = "0.34.1"

[dependencies.elrond-wasm-debug]
version = "0.34.1"

